--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>here is a recording that was taken a while ago: </p>
+  <p>Jan 6 2023. Recording about plane watching in California during WW II  </p>
   <audio controls>
     <source src="Airplane%20watching%20WWII%20-%20(audio).mp3" type="audio/mpeg">
   </audio>
